[package]
name = "dndserver-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
]}
rfd = "0.11.3"
serde = { version = "1.0.158", features = ["derive"] }

[dependencies.windows-sys]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
]